Fix whitespace gap on footer

--- a/themes/typing/source/css/source.css
+++ b/themes/typing/source/css/source.css
@@ -524,6 +524,7 @@ $dark-white-light: #fff;
 
 .dark {
   background-color: $dark-bg;
+  background: $dark-bg;
   color: $dark-color;
   .container,
   .footer {
